# CshaderEngine

./: CMakeLists.txt  README.md  run.sh
Chapter/: day1.md
include/glad/: glad.h
shaders/: Tunnel.frag  cbench.frag  default.frag  default.vert  fractal.frag  main.frag  octogram.frag  prfractal.frag  pyfractal.vert  rainbow.frag  rainbow.vert  stars.frag  stars.vert
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  glad.c  main.cpp  shader_utils.h
